--- a/backend/package.json
+++ b/backend/package.json
@@ -18,12 +18,14 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "mysql2": "^3.6.0",
+    "pg": "^8.11.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "openai": "^4.20.1",
     "jsonwebtoken": "^9.0.2",
-    "bcryptjs": "^2.4.3"
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "mqtt": "^5.3.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
