--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Smart Plant Monitoring System",
   "main": "backend/src/app.js",
   "scripts": {
-    "start": "cd backend && npm start",
+    "start": "cd backend && npm install && npm start",
     "dev": "cd backend && npm run dev"
   },
   "engines": {
@@ -12,5 +12,16 @@
   },
   "keywords": ["iot", "plant", "monitoring"],
   "author": "Your Name",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.18.2",
+    "pg": "^8.11.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "openai": "^4.20.1",
+    "jsonwebtoken": "^9.0.2",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "mqtt": "^5.3.6"
+  }
 }
