Restore frontend: add build scripts and frontend serving

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "backend/src/app.js",
   "scripts": {
     "start": "cd backend && npm install && npm start",
+    "build": "cd frontend && npm install && npm run build",
+    "heroku-postbuild": "npm run build",
     "dev": "cd backend && npm run dev"
   },
   "engines": {
