--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
-    "react-gauge-chart": "^0.5.1"
-  },
-  "devDependencies": {
+    "react-gauge-chart": "^0.5.1",
     "@vitejs/plugin-react": "^4.0.0",
     "vite": "^4.0.0"
   }
