--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^4.0.0",
+    "lodash": "^4.17.21",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.0",
     "react-gauge-chart": "^0.5.1",
-    "@vitejs/plugin-react": "^4.0.0",
+    "react-router-dom": "^6.8.0",
     "vite": "^4.0.0"
   }
 }
