--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Smart Plant Monitoring System",
   "main": "backend/src/app.js",
   "scripts": {
-    "start": "cd backend && npm install && npm start",
-    "dev": "cd backend && npm run dev"
+    "start": "cd frontend && npm install && npm run build && cd ../backend && npm install && npm start",
+    "dev": "cd backend && npm run dev",
+    "build": "cd frontend && npm install && npm run build"
   },
   "engines": {
     "node": "18.x"
@@ -23,5 +24,13 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "mqtt": "^5.3.6"
+  },
+  "devDependencies": {
+    "vite": "^4.0.0",
+    "@vitejs/plugin-react": "^4.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-gauge-chart": "^0.5.1",
+    "react-router-dom": "^6.8.0"
   }
 }
